--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    
     "clsx": "^2.0.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
